Fixed issue with pager visibility on gallery.

--- a/app/_sass/components/_bx-slider.scss
+++ b/app/_sass/components/_bx-slider.scss
@@ -15,6 +15,10 @@
 
 .bx-pager-link {
   border: 1px solid #fff;
+  box-shadow: 1px 1px 0 #d3d3d3,
+              -1px 1px 0 #D3D3D3,
+              1px -1px 0 #d3d3d3,
+              -1px -1px 0 #d3d3d3;
   border-radius: 50%;
   display: block;
   height: em(20px);
